--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,7 @@ flutter:
    uses-material-design: true
    assets:
       - assets/
+      - assets/svgs/
    fonts:
       - family: Raleway
         fonts:
